welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value isWekend
  return (isWekend && 40>=cigars) || (!isWeekend && (40>=cigars && cigars<=60))
          ^