welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  return (isWekend && 40>=cigars) || (!isWeekend && (40>=cigars && cigars<=60))
}